--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,6 +10,12 @@ a {
     color: #0B3861;
 }
 
+a:hover {
+    color: #0056b3;
+    text-decoration: initial;
+    text-decoration-line: initial;
+}
+
 .btn-sm, .btn-group-sm > .btn {
     line-height: 22px;
     padding: 5px 9px;
@@ -22,6 +28,7 @@ a {
 /*
 vedi https://stackoverflow.com/a/34643330/28852
  */
+
 app-root {
     display: flex;
     position: absolute;
@@ -42,6 +49,7 @@ app-root {
 /*
 per far funzionare la agGrid in un layout flexbox:
 */
+
 #borderLayout_eRootPanel {
     display: flex !important;
     flex-grow: 1;
@@ -78,6 +86,7 @@ se si mettono nel css del componente specifico (SeriesForm) non hanno effetto,
 perchè le suddette classi e il tag "app-series-form" sono esterni allo scopo
 di quel css...
 */
+
 .modal-dialog,
 .modal-content {
     display: flex;
@@ -87,9 +96,11 @@ di quel css...
     margin-left: auto;
     margin-right: auto;
 }
+
 .modal-dialog {
     max-height: 90%;
 }
+
 app-series-form {
     display: flex;
     position: relative;
@@ -100,6 +111,7 @@ app-series-form {
 
 
 /**/
+
 .card {
     display: flex;
     position: relative;
