--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -132,6 +132,12 @@
     bottom: 0;
     left: 0;
     right: 0;
+    overflow: hidden;
+}
+
+#GridObj {
+    width: 100%;
+    height: 100%;
 }
 
 .title-filter {
